@@ -28,7 +28,7 @@
 
 namespace Mono.Cecil {
 
-	public interface IMetadataScope {
+	public interface IMetadataScope : IMetadataTokenProvider {
 		string Name { get; set; }
 	}
 }
